# tokora

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  REVIEW.md  TASK.md  rust_out  tarpaulin-report.json  tarpaulin.toml
tokit/: Cargo.toml  book.toml
tokit/benches/: backtrack.rs  input_scan.rs  parser_combinators.rs
tokit/examples/: c_expression.rs  calculator.rs  json.rs  s_expression.rs
tokit/src/: check.rs  container.rs  delimiter.rs  keyword.rs  lib.rs  located.rs  parse_choice.rs  parse_context.rs  parse_input.rs  parse_state.rs  prelude.rs  punct.rs  require.rs  span.rs  syntax.rs  trace.rs  try_parse_input.rs
tokit/src/cache/: blackhole.rs  generic_arraydeque.rs  mod.rs  option.rs
tokit/src/check/: mod.rs
tokit/src/conformance/: mod.rs  tests.rs
tokit/src/container/: mod.rs  tests.rs
tokit/src/cst/: cast.rs  error.rs  mod.rs
tokit/src/emitter/: mod.rs  pratt.rs  severity.rs
tokit/src/error/: errors.rs  hex_escape.rs  incomplete.rs  incomplete_syntax.rs  incomplete_token.rs  invalid.rs  invalid_hex_digits.rs  malformed.rs  missing.rs  mod.rs  unclosed.rs  undelimited.rs  unexpected_end.rs  unexpected_identifier.rs  unexpected_keyword.rs  unexpected_lexeme.rs  unexpected_prefix.rs  unexpected_suffix.rs  unicode_escape.rs  unknown_lexeme.rs  unopened.rs  unterminated.rs
tokit/src/fuzz/: consume.rs  fixtures.rs  mod.rs  ops.rs  partial.rs  session.rs
tokit/src/guide/: README.md  SUMMARY.md  ch01_tokens.md  ch01_tokens.rs  ch02_parsers.md  ch02_parsers.rs  ch03_combinators.md  ch03_combinators.rs  ch04_dispatch.md  ch04_dispatch.rs  ch05_pratt.md  ch05_pratt.rs  ch06_backtracking.md  ch06_backtracking.rs  ch07_diagnostics.md  ch07_diagnostics.rs  ch08_recovery.md  ch08_recovery.rs  ch09_streaming.md  ch09_streaming.rs  ch10_testing.md  ch10_testing.rs  mod.rs
tokit/src/input/: checkpoint.rs  completeness.rs  cursor.rs  lineage.rs  mod.rs  tests.rs
tokit/src/keyword/: mod.rs  tests.rs
tokit/src/lexer/: logos.rs  mod.rs
tokit/src/parse_context/: mod.rs  tests.rs
tokit/src/parse_state/: mod.rs  tests.rs
tokit/src/parser/: accepted.rs  any.rs  by_ref.rs  collect.rs  empty.rs  expect.rs  fail.rs  filter.rs  filter_map.rs  ident.rs  ident_list.rs  ignore.rs  keyword.rs  labelled.rs  mod.rs  padded.rs  punct.rs  recover.rs  skip_then_retry.rs  todo.rs  unwrapped.rs  with.rs
tokit/src/punct/: mod.rs
tokit/src/slice/: bstr.rs  bstr_1.rs  bytes_1.rs  hipstr.rs  hipstr_0_8.rs  mod.rs
tokit/src/source/: bstr.rs  bstr_1.rs  bytes.rs  bytes_1.rs  hipstr.rs  hipstr_0_8.rs  mod.rs  tests.rs
tokit/src/state/: mod.rs  recursion_tracker.rs  token_tracker.rs  tracker.rs
tokit/src/token/: lit.rs  mod.rs  pratt.rs  punct.rs
tokit/src/try_parse_input/: mod.rs
tokit/src/types/: ident.rs  ident_list.rs  keyword.rs  lit.rs  mod.rs
tokit/src/utils/: cmp.rs  container.rs  delimited.rs  escaped.rs  expected.rs  human_display.rs  knowledge.rs  lexeme.rs  marker.rs  message.rs  mod.rs  oneof.rs  positioned_char.rs  sdl_display.rs  syntax_tree_display.rs  tests.rs  to_equivalent.rs
tokit/tests/: alias_punct_coverage.rs  boost.rs  bstr_gate.rs  bytes_gate.rs  cache_rewind_coverage.rs  combinators.rs  container.rs  container_cache_tests.rs  coverage_boost.rs  coverage_combinators.rs  coverage_delim_edges.rs  coverage_gap_fill.rs  coverage_nonparser.rs  coverage_parser_small.rs  coverage_state_machine.rs  coverage_sw_delim_mutref.rs  coverage_sync_try_expect.rs  delimited.rs  delimited_edges.rs  delimited_errors.rs  delimited_tests.rs  dispatch.rs  emitter.rs  emitter_coverage.rs  emitter_tests.rs  error_coverage.rs  error_coverage_extra.rs  error_types.rs  escaped_tests.rs  expect.rs  expect_with_cache.rs  expect_with_modifiers.rs  handler.rs  handler_coverage.rs  handler_emitter_coverage.rs  handler_extra.rs  hipstr_gate.rs  input_ref.rs  input_ref_coverage.rs  input_ref_tests.rs  (+63 more)
tokit/tests/common/: mod.rs
tokit/tools/: mdbook_docs_links.py
tokora/: CHANGELOG.md  Cargo.toml  book.toml
tokora/benches/: backtrack.rs  input_scan.rs  parser_combinators.rs
tokora/examples/: c_expression.rs  c_expression_cst.rs  calculator.rs  calculator_cst.rs  json.rs  json_cst.rs  s_expression.rs  s_expression_cst.rs
tokora/src/: delimiter.rs  lib.rs  located.rs  parse_choice.rs  parse_input.rs  prelude.rs  require.rs  span.rs  syntax.rs  trace.rs
tokora/src/cache/: cache_trait_tests.rs  mod.rs  tests.rs
tokora/src/check/: tests.rs
tokora/src/conformance/: mod.rs
tokora/src/cst/: error.rs  event.rs  mod.rs  sink.rs  tests.rs
tokora/src/emitter/: cst.rs  delimited.rs  mod.rs  severity.rs
tokora/src/error/: incomplete.rs  incomplete_syntax.rs  invalid.rs  invalid_hex_digits.rs  malformed.rs  missing.rs  mod.rs  terminal.rs  tests.rs  unclosed.rs  undelimited.rs  unexpected_end.rs  unexpected_identifier.rs  unexpected_keyword.rs  unexpected_lexeme.rs  unknown_lexeme.rs  unopened.rs  unterminated.rs
tokora/src/fuzz/: consume.rs  cst.rs  fixtures.rs  mod.rs  ops.rs  partial.rs  rng.rs
tokora/src/guide/: README.md  SUMMARY.md  arch_atomic_emitter.md  arch_checkpoint_rewind.md  arch_event_stream_cst.md  arch_parsing_engine.md  arch_source_slice.md  ch01_tokens.md  ch02_parsers.md  ch03_combinators.md  ch04_dispatch.md  ch05_pratt.md  ch06_backtracking.md  ch07_diagnostics.md  ch08_recovery.md  ch09_streaming.md  ch10_testing.md  ch11_real_parser.md  (+12 more)
tokora/tests/: boost.rs  bstr_gate.rs  bytes_gate.rs  cmpl_pins.rs  combinators.rs  container.rs  delim_unclosed.rs  delim_wrong_opener_eoi.rs  delimited.rs  delimited_edges.rs  delimited_errors.rs  dispatch.rs  downcast.rs  emitter.rs  error.rs  error_extra.rs  escaped.rs  expect.rs  expect_with_cache.rs  handler.rs  handler_coverage.rs  handler_extra.rs  hipstr_gate.rs  input_ref.rs  keyword.rs  lexer_error_paths.rs  lit_token.rs  misc.rs  missing_separator.rs  nonparser.rs  parse_input.rs  parser_atoms.rs  parser_basic.rs  parser_delim.rs  parser_extra.rs  parser_fold.rs  parser_misc.rs  parser_node.rs  parser_padded.rs  parser_pratt.rs  (+34 more)
tokora/tools/: mdbook_docs_links.py  validate_docs.py
(+1436 files in other folders)
