[workspace]
members = [
  "tokit"
]
resolver = "3"

[workspace.package]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/al8n/tokit"
homepage = "https://github.com/al8n/tokit"
documentation = "https://docs.rs/tokit"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
