[package]
name = "tokit"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Blazing fast parser combinators: parse-while-lexing (zero-copy), deterministic LALR-style parsing, no backtracking. Flexible emitters for fail-fast runtime or greedy compiler diagnostics"
categories = ["parsing", "text-processing", "no-std"]
keywords = ["parser", "combinator", "token", "logos", "error-recovery"]

[features]
default = ["std"]
alloc = ["generic-arraydeque/alloc", "mayber/alloc"]
std = [
  "generic-arraydeque/default",
  "thiserror/default",

  "among?/std",
  "either?/std",
  "bytes?/default",
  "hipstr?/default",
  "bstr?/default",
  "logos?/default",
  "mayber/default",
]

logos = ["dep:logos"]
rowan = ["dep:rowan", "std"]

among = ["dep:among"]
either = ["dep:either"]
hipstr = ["dep:hipstr"]
bytes = ["dep:bytes"]
bstr = ["dep:bstr"]
smallvec = ["dep:smallvec", "alloc"]
heapless = ["dep:heapless"]

[dependencies]
ascii = { version = "1", default-features = false }
deranged = { version = "0.5", default-features = false }
mayber = { version = "0.1", default-features = false }
derive_more = { version = "2", default-features = false, features = [
  "display",
  "deref",
  "deref_mut",
  "as_ref",
  "from",
  "into",
  "unwrap",
  "try_unwrap",
  "is_variant",
] }
generic-arraydeque = { version = "0.1", default-features = false, features = ["unstable"] }
paste = "1"
seq-macro = { version = "0.3", default-features = false }
thiserror = { version = "2", default-features = false }

among = { version = "0.1", default-features = false, optional = true }
either = { version = "1", default-features = false, optional = true }
bstr = { version = "1", default-features = false, optional = true }
bytes = { version = "1", default-features = false, optional = true }
heapless = { version = "0.9", default-features = false, optional = true }
hipstr = { version = "0.8", default-features = false, optional = true }
logos = { version = "0.16", default-features = false, optional = true, features = [
  "export_derive",
] }
rowan = { version = "0.16", optional = true }
smallvec = { version = "1", default-features = false, optional = true, features = [
  "const_new",
] }

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["std", "logos"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
