[package]
name = "tokit"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Blazing fast parser combinators: parse-while-lexing (zero-copy), deterministic LALR-style parsing, no backtracking. Flexible emitters for fail-fast runtime or greedy compiler diagnostics"
categories = ["parsing", "text-processing", "no-std"]
keywords = ["parser", "combinator", "token", "logos", "error-recovery"]

[features]
default = ["std"]
alloc = ["generic-arraydeque/alloc", "mayber/alloc", "tinyvec_1?/alloc"]
std = [
  "generic-arraydeque/default",
  "thiserror/default",

  "bytes_1?/default",
  "hipstr_0_8?/default",
  "bstr_1?/default",
  "tinyvec_1?/default",

  "logos_0_14?/default",
  "logos_0_15?/default",
  "logos_0_16?/default",
  "mayber/default",
]

logos = ["logos_0_16"]
logos_0_14 = ["dep:logos_0_14"]
logos_0_15 = ["dep:logos_0_15"]
logos_0_16 = ["dep:logos_0_16"]

# Exposes the raw, unstable checkpoint backtracking API — `InputRef::{save, restore, commit}`
# and, with them, the `Checkpoint` type's construction and consumption. Off by default: the
# supported backtracking surface is the transaction guards (`begin`/`begin_stacked`), the
# `ParseState` session points, and `attempt`/`try_attempt`. No dependencies; opting in only
# flips those three methods from crate-internal to public.
unstable-raw = []

rowan = ["dep:rowan", "std"]

bytes = ["bytes_1"]
bytes_1 = ["dep:bytes_1"]

bstr = ["bstr_1"]
bstr_1 = ["dep:bstr_1"]

hipstr = ["hipstr_0_8"]
hipstr_0_8 = ["dep:hipstr_0_8"]

smallvec = ["smallvec_1"]
smallvec_1 = ["dep:smallvec_1", "alloc"]

heapless = ["heapless_0_9"]
heapless_0_9 = ["dep:heapless_0_9"]

tinyvec = ["tinyvec_1"]
tinyvec_1 = ["dep:tinyvec_1"]

[dependencies]
ascii = { version = "1", default-features = false }
deranged = { version = "0.5", default-features = false }
mayber = { version = "0.1", default-features = false }
derive_more = { version = "2", default-features = false, features = [
  "display",
  "deref",
  "deref_mut",
  "as_ref",
  "from",
  "into",
  "unwrap",
  "try_unwrap",
  "is_variant",
] }
generic-arraydeque = { version = "0.2", default-features = false, features = ["unstable"] }
paste = "1"
seq-macro = { version = "0.3", default-features = false }
thiserror = { version = "2", default-features = false }

# Third-party Source Types
bstr_1 = { package = "bstr", version = "1", default-features = false, optional = true }
bytes_1 = { package = "bytes", version = "1", default-features = false, optional = true }
hipstr_0_8 = { package = "hipstr", version = "0.8", default-features = false, optional = true }

# Third-party Container Types
heapless_0_9 = { package = "heapless", version = "0.9", default-features = false, optional = true }
smallvec_1 = { package = "smallvec", version = "1", default-features = false, optional = true, features = [
  "const_new",
] }
tinyvec_1 = { package = "tinyvec", version = "1", default-features = false, optional = true }

# Third-party Parser/Lexer Tools
logos_0_14 = { package = "logos", version = "0.14", default-features = false, optional = true, features = [
  "export_derive",
] }
logos_0_15 = { package = "logos", version = "0.15", default-features = false, optional = true, features = [
  "export_derive",
] }
logos_0_16 = { package = "logos", version = "0.16", default-features = false, optional = true, features = [
  "export_derive",
] }
rowan = { version = "0.16", optional = true }

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

# Disable the default libtest bench harness; all benches go through criterion.
[lib]
bench = false

[[bench]]
name = "input_scan"
path = "benches/input_scan.rs"
harness = false
required-features = ["logos", "std"]

[[bench]]
name = "backtrack"
path = "benches/backtrack.rs"
harness = false
# Exercises the raw checkpoint triple (`save`/`restore`/`commit`), which is public only under
# `unstable-raw`; require it so the bench is skipped rather than failing to compile when off.
required-features = ["logos", "std", "unstable-raw"]

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["std", "logos"]

[[example]]
name = "calculator"
path = "examples/calculator.rs"
required-features = ["std", "logos"]

[[example]]
name = "s_expression"
path = "examples/s_expression.rs"
required-features = ["std", "logos"]

[[example]]
name = "c_expression"
path = "examples/c_expression.rs"
required-features = ["std", "logos"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
