[package]
name = "tokora"
version = "0.5.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Deterministic parser combinators, with on-demand lexing, LALR-style dispatch, explicit backtracking, and configurable diagnostics."
categories = ["parsing", "text-processing", "no-std", "no-std::no-alloc"]
keywords = ["parser", "combinator", "token", "logos", "error-recovery"]

[features]
default = ["std"]
alloc = ["generic-arraydeque/alloc", "mayber/alloc", "tinyvec_1?/alloc"]
std = [
  "generic-arraydeque/default",
  "thiserror/default",

  "bytes_1?/default",
  "hipstr_0_8?/default",
  "bstr_1?/default",
  "smol_bytes_0_1?/default",
  "tinyvec_1?/default",

  "logos_0_14?/default",
  "logos_0_15?/default",
  "logos_0_16?/default",
  "mayber/default",
]

logos = ["logos_0_16"]
logos_0_14 = ["dep:logos_0_14"]
logos_0_15 = ["dep:logos_0_15"]
logos_0_16 = ["dep:logos_0_16"]

# Parser tracing. Turns on `traced(name, parser)` — a wrapper that prints an indented
# enter / exit-ok / exit-err / rollback event tree to stderr with an input preview — and
# instruments the crate's own combinators (`try_expect`, `peek`, the `sync` family, the
# transaction guards' begin/commit/rollback, `attempt`/`try_attempt`, and the
# separated/repeated drivers) to emit their name at the current depth. Std-implied (uses
# stderr and thread-locals) and zero extra dependencies. Zero-cost when off: `traced` is the
# identity and every internal hook site is `#[cfg]`'d out of existence, not runtime-guarded.
trace = ["std"]

# Exposes the raw, unstable checkpoint backtracking API — `InputRef::{save, restore, commit}`
# and, with them, the `Checkpoint` type's construction and consumption. Off by default: the
# supported backtracking surface is the transaction guards (`begin`/`begin_stacked`), the
# `InputRef` session points, and `attempt`/`try_attempt`. No dependencies; opting in only
# flips those three methods from crate-internal to public.
unstable-raw = []

# The lexer conformance test kit (`tokora::conformance`): a `Harness` that drives a custom
# `Lexer` against the trait-level lexer contract and, through the input machinery, a set of
# deterministic save/peek/drain/restore schedules. It is a test-time tool — it asserts, formats
# panic context, and owns `Vec`/`String`, so it requires `std`. Off by default; enabling it only
# compiles the `conformance` module.
conformance = ["std"]

# The public fuzz harness (`tokora::fuzz`): a deterministic operation-script fuzzer that drives
# the input/backtracking machinery (consume, peek, the `sync` family, `attempt`, transaction
# guards, stacked savepoints, session points, partial-mode chunking) against a scriptable
# synthetic lexer and checks the documented laws after every operation. It asserts, owns
# `Vec`/`String`, and drives the allocator-gated guards, so it requires `std` (which provides the
# `alloc` the guards and session stack need). Off by default; enabling it only compiles the
# `fuzz` module, which runs as ordinary `#[test]`s on stable Rust.
fuzz = ["std"]

rowan = ["dep:rowan", "std"]

bytes = ["bytes_1"]
bytes_1 = ["dep:bytes_1"]

bstr = ["bstr_1"]
bstr_1 = ["dep:bstr_1"]

hipstr = ["hipstr_0_8"]
hipstr_0_8 = ["dep:hipstr_0_8"]

smol_bytes = ["smol_bytes_0_1"]
smol_bytes_0_1 = ["dep:smol_bytes_0_1"]

smallvec = ["smallvec_1"]
smallvec_1 = ["dep:smallvec_1", "alloc"]

heapless = ["heapless_0_9"]
heapless_0_9 = ["dep:heapless_0_9"]

tinyvec = ["tinyvec_1"]
tinyvec_1 = ["dep:tinyvec_1"]

[dependencies]
ascii = { version = "1", default-features = false }
deranged = { version = "0.5", default-features = false }
mayber = { version = "0.1", default-features = false }
derive_more = { version = "2", default-features = false, features = [
  "display",
  "deref",
  "deref_mut",
  "as_ref",
  "from",
  "into",
  "unwrap",
  "try_unwrap",
  "is_variant",
] }
generic-arraydeque = { version = "0.2", default-features = false, features = ["unstable"] }
paste = "1"
seq-macro = { version = "0.3", default-features = false }
thiserror = { version = "2", default-features = false }

# Third-party Source Types
bstr_1 = { package = "bstr", version = "1", default-features = false, optional = true }
bytes_1 = { package = "bytes", version = "1", default-features = false, optional = true }
hipstr_0_8 = { package = "hipstr", version = "0.8", default-features = false, optional = true }
smol_bytes_0_1 = { package = "smol-bytes", version = "0.1", default-features = false, optional = true, features = [
  "alloc",
] }

# Third-party Container Types
heapless_0_9 = { package = "heapless", version = "0.9", default-features = false, optional = true }
smallvec_1 = { package = "smallvec", version = "1", default-features = false, optional = true, features = [
  "const_new",
] }
tinyvec_1 = { package = "tinyvec", version = "1", default-features = false, optional = true }

# Third-party Parser/Lexer Tools
logos_0_14 = { package = "logos", version = "0.14", default-features = false, optional = true, features = [
  "export_derive",
] }
logos_0_15 = { package = "logos", version = "0.15", default-features = false, optional = true, features = [
  "export_derive",
] }
logos_0_16 = { package = "logos", version = "0.16", default-features = false, optional = true, features = [
  "export_derive",
] }
rowan = { version = "0.16", optional = true }

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[lints]
workspace = true

# Disable the default libtest bench harness; all benches go through criterion.
[lib]
bench = false

[[bench]]
name = "input_scan"
path = "benches/input_scan.rs"
harness = false
required-features = ["logos", "std"]

[[bench]]
name = "parser_combinators"
path = "benches/parser_combinators.rs"
harness = false
required-features = ["logos", "std"]

[[bench]]
name = "backtrack"
path = "benches/backtrack.rs"
harness = false
# Exercises the raw checkpoint triple (`save`/`restore`/`commit`), which is public only under
# `unstable-raw`; require it so the bench is skipped rather than failing to compile when off.
required-features = ["logos", "std", "unstable-raw"]

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["std", "logos"]

[[example]]
name = "calculator"
path = "examples/calculator.rs"
required-features = ["std", "logos"]

[[example]]
name = "s_expression"
path = "examples/s_expression.rs"
required-features = ["std", "logos"]

[[example]]
name = "c_expression"
path = "examples/c_expression.rs"
required-features = ["std", "logos"]

# Lossless-CST twins of the four examples above: each parses the same grammar as its twin but
# builds a rowan concrete syntax tree through a `cst::Sink`, so it needs `rowan` as well.
[[example]]
name = "calculator_cst"
path = "examples/calculator_cst.rs"
required-features = ["std", "logos", "rowan"]

[[example]]
name = "s_expression_cst"
path = "examples/s_expression_cst.rs"
required-features = ["std", "logos", "rowan"]

[[example]]
name = "json_cst"
path = "examples/json_cst.rs"
required-features = ["std", "logos", "rowan"]

[[example]]
name = "c_expression_cst"
path = "examples/c_expression_cst.rs"
required-features = ["std", "logos", "rowan"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
